--- a/eds214_day1_comp1.Rmd
+++ b/eds214_day1_comp1.Rmd
@@ -13,4 +13,5 @@ knitr::opts_chunk$set(echo = TRUE)
 #another eay to insert an image
 #knitr::include_graphics("images/sweater.jpg")
 ```
+Adding a line to test my github key!
 
